[gd_scene load_steps=12 format=3 uid="uid://cv7r5iq1whl74"]

[ext_resource type="Script" path="res://scenes/main_menu/main_menu.gd" id="1_ew610"]
[ext_resource type="Theme" uid="uid://b6qthuai1qntb" path="res://art/themes/MinimalUI/MinimalUI.tres" id="1_x40pg"]
[ext_resource type="Texture2D" uid="uid://bhjjbaq75b4nt" path="res://art/backgrounds/waterPattern.webp" id="4_84flg"]
[ext_resource type="Texture2D" uid="uid://dd2ia5vm4bk2h" path="res://art/backgrounds/Pattern.jpg" id="4_gmuka"]
[ext_resource type="Texture2D" uid="uid://bd0jskfcuvdwo" path="res://art/backgrounds/cat2.png" id="5_6hu1k"]
[ext_resource type="FontFile" uid="uid://ddm3m57t31rfs" path="res://art/fonts/JMH Typewriter.otf" id="6_3bv2r"]
[ext_resource type="AudioStream" uid="uid://ch1qwovae6hdw" path="res://art/sfx/select_006.ogg" id="8_y4qr8"]
[ext_resource type="AudioStream" uid="uid://6juhwdamjhgb" path="res://art/sfx/click_001.ogg" id="9_mbi5e"]
[ext_resource type="AudioStream" uid="uid://c4ofybv5j3d5a" path="res://art/sfx/glass_006.ogg" id="10_ies6f"]

[sub_resource type="Shader" id="Shader_yxhtj"]
code = "shader_type canvas_item;

uniform float speed = 0.05;
uniform float distortionAmount = 0.05;

void vertex() {
    UV.x -= TIME * speed;
}

void fragment() {
    vec2 distorted_uv = vec2(
        UV.x + sin(UV.y * 2.0 + TIME) * distortionAmount,
        UV.y + cos(UV.x * 2.0 + TIME) * distortionAmount
    );

    vec4 texColor = texture(TEXTURE, distorted_uv);
    float luminance = dot(texColor.rgb, vec3(0.5, 0.5, 0.01));
    vec3 finalColor = mix(vec3(0.0), vec3(0.8, 0.0, 0.2), luminance);

    COLOR = vec4(finalColor, texColor.a);
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f01q2"]
shader = SubResource("Shader_yxhtj")
shader_parameter/speed = 0.1
shader_parameter/distortionAmount = 0.03

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_x40pg")
script = ExtResource("1_ew610")

[node name="AnimatedBackground" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MovingPattern1" type="TextureRect" parent="AnimatedBackground"]
texture_repeat = 2
material = SubResource("ShaderMaterial_f01q2")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_84flg")
expand_mode = 2

[node name="MovingPattern2" type="TextureRect" parent="AnimatedBackground"]
texture_repeat = 2
material = SubResource("ShaderMaterial_f01q2")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 59.0
offset_right = -186.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_gmuka")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="AnimatedBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -48.0
offset_right = 58.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_6hu1k")
expand_mode = 3

[node name="Label" type="Label" parent="AnimatedBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -64.0
offset_right = 24.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_3bv2r")
theme_override_font_sizes/font_size = 20
text = "Sleepy
Rush"
uppercase = true

[node name="BackgroundColor" type="ColorRect" parent="AnimatedBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -193.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = -138.0
offset_right = 57.0
offset_bottom = -5.0
grow_vertical = 0

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Audio" type="Node" parent="."]

[node name="ExitClick" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("8_y4qr8")

[node name="NormalClick" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("9_mbi5e")

[node name="Hover" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("10_ies6f")
volume_db = -7.0
pitch_scale = 0.8

[connection signal="mouse_entered" from="VBoxContainer/PlayButton" to="." method="_on_play_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
